# beeb5kSystem

./: .editorconfig  .gitignore  .sops.yaml  flake.nix  result
common/: default.nix
common/modules/: default.nix
common/overlays/: default.nix  ioskeleyInput.nix  ioskeleyMono.nix  qt6ct.nix
common/programs/: btop.nix  default.nix  dunst.nix  file-manager.nix  firefox.nix  fish.nix  obs.nix  rofi.nix  terminal.nix  tmux.nix  vesktop.nix  waybar.nix  zen-browser.nix  zenBrowser.nix  zsh.nix
common/templates/: default.nix
common/templates/python/: .gitignore  flake.nix  pyproject.toml
common/templates/python/src/hello_world/: __init__.py  main.py
home/: home.nix  packages-unstable.nix  packages.nix
hosts/: common.nix  system.nix
hosts/bixos/: default.nix  hardware-configuration.nix
hosts/lixos/: default.nix  hardware-configuration.nix
hosts/nixios/: default.nix  hardware-configuration.nix
lib/: importer.nix  mkFlakeOutputs.nix  mkHome.nix  mkSystem.nix
modules/home/: default.nix
modules/home-manager/: anyrun.nix  cliphist.nix  default.nix  desktop-entries.nix  fastfetch.nix  file-manager.nix  firefox.nix  fonts.nix  foot.nix  fuzzel.nix  git.nix  mako.nix  obs.nix  river.nix  starship.nix  stylix.nix  swaync.nix  terminal.nix  tmux.nix  wofi.nix  zen-browser.nix  zsh.nix
modules/system/: boot-loader.nix  default.nix  keyboard.nix  nix.nix  nvidia.nix  specialisation.nix  stylix.nix
nixos/: configuration.nix  hardware-configuration.nix  packages.nix
secrets/: secrets.yaml
users/: common.nix  users.nix
users/bee/: default.nix
(+218 files in other folders)
