[project]
name = "hello-world"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
hello_world = "hello_world.main:main"

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[tool.pyrefly]
project-includes = [
  "**/*.py*",
  "**/*.ipynb",
]
